avcodec/jpeg2000dec: Limit x/y step to 1<<30

Fixes infinite loop
Fixes Ticket4663

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>